/**
 * Copyright (C) 2009-2015 Lightbend Inc. <http://www.lightbend.com>
 */

syntax = "proto3";
option csharp_namespace = "Akka.Cluster.PubSub.Serializers.Proto";
option java_package = "akka.cluster.pubsub.protobuf.msg";
option optimize_for = SPEED;

message Status {
  message Version {
    Address address = 1;
    int64 timestamp = 2;
  }
  repeated Version versions = 1;
  bool replyToStatus = 2;
}

message Delta {
  message Entry {
    string key = 1;
    int64 version = 2;
    string ref = 3; 
  }
  message Bucket {
    Address owner = 1;
    int64 version = 2;
    repeated Entry content = 3;
  }
  repeated Bucket buckets = 1;
}

/**
 * Defines a remote address.
 */
message Address {
  string system = 1;
  string hostname = 2;
  uint32 port = 3;
  string protocol = 4;
}

/**
 * Send normally local, but it is also used by the ClusterClient.
 */
message Send {
  string path = 1;
  bool localAffinity = 2;
  Payload payload = 3; 
}

/**
 * SendToAll normally local, but it is also used by the ClusterClient.
 */
message SendToAll {
  string path = 1;
  bool allButSelf = 2;
  Payload payload = 3; 
}

/**
 * Publish normally local, but it is also used by the ClusterClient.
 */
message Publish {
  string topic = 1;
  Payload payload = 3; 
}

message Payload {
  bytes enclosedMessage = 1;
  int32 serializerId = 2;
  bytes messageManifest = 4;
}
